--- a/ping-protocol/README
+++ b/ping-protocol/README
@@ -1,1 +1,30 @@
+<snippet>
+  <content><![CDATA[
+# ${1:ping-protocol implementation}
+Working ping-protocol implementation.
+## Installation
+python 2.7 and a operating system with Berkeley Sockets distribution.
+## Files
+client.py =====>>> The client side code. 
+server.py =====>>> The server side code.
+## Usage
+In order to run you just need to open two terminals and goto the directory of these files. There run both the files without any command line arguments using python 2.7 i.e.:
+------------------------------------------------------------------------------
+TERMINAL 1:							|| TERMINAL 2:							||
+python client.py 					|| python server.py 					||
+									||
+...............................................................................
+Just make sure you run the server code before the client side code o/w client side terminal will just show REQUEST TIMED OUT.
 
+## Contributing
+1. Fork it!
+2. Create your feature branch: `git checkout -b my-new-feature`
+3. Commit your changes: `git commit -am 'Add some feature'`
+4. Push to the branch: `git push origin my-new-feature`
+5. Submit a pull request :D
+
+## Credits
+Who else. Me. :D
+]]></content>
+  <tabTrigger>readme</tabTrigger>
+</snippet>
